# belpomoshnik

./: .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  PLAN-REDESIGN.md  README.md  SETUP_REPORT.md  docker-compose.yml  package.json  pyproject.toml  pytest.ini  requirements.txt  twinkling-noodling-petal.md
.claude/: launch.json  settings.local.json
Web app design for Belpomoshch/: README.md  fix-icons.js  index.html
claude/: CLAUDE.md  CONTENT_PROMPT.md  IDEA.md  IMPORT_PROMPTS.md  PLAN.md  SPEC.md
docs/: AI_GUIDE.md  API_CONTRACTS.md  APP_SCREENS.md  ARCHITECTURE.md  BACKEND_SETUP.md  BETA_ACCEPTANCE_CHECKLIST.md  BETA_CHECKLIST.md  BETA_DEMO_GUIDE.md  CHANGELOG.md  CLEANUP_REPORT.md  CODEX_SPRINT2_BRIEF.md  CODEX_WORKFLOW.md  CONTENT_GENERATION_PROMPTS_BY_CATEGORY.md  CONTENT_PROMPTS.md  CONTENT_PUBLICATION_RESEARCH_PROMPTS.md  CONTROL_CENTER.md  DATA_MODEL_DRAFT.md  DECISIONS.md  DEMO_SCRIPT.md  DESIGN_SYSTEM.md  DIPLOMA_STRUCTURE_PLAN.md  EDITOR_PANEL_VISION.md  FIGMA_TRANSFER_GUIDE.md  INSTITUTIONS_RESEARCH_PROMPT.md  IOS_LAYOUT_CHECKLIST.md  LEARNING_MODULE.md  MOBILE_LIVE_RELOAD.md  MOCK_DATA_SPEC.md  MVP_SCOPE.md  NOTIFICATIONS_ARCHITECTURE.md  PROJECT_CONTEXT.md  PROJECT_STATUS.md  PUSH_NOTIFICATIONS.md  REACT_MIGRATION_AUDIT.md  REACT_MIGRATION_PLAN.md  REACT_WEBVIEW_FINALIZATION_PLAN.md  SCENARIO_BACKEND.md  SECURITY_POLICY.md  SOURCES.md  TASKS.md  (+5 more)
reactvitemaket/: .env.example  .env.production  README.md  capacitor.config.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
rework project + promts/: 1. доработка моих документов.md  10.demo control.md  2. finance.md  3. Белхелпер логика бекенд.md  4. Белхелпер фронтенд.md  5. АИ помощник в редакторской.md  6. уведомления.md  7. доработка админ панели.md  8. админ панель регионы и города.md  9. финальная стабилизация и проверка логики админ панели.md  EXECUTION_PLAN.md
scripts/: backup.sh  build_diploma_docx.py  check.sh  convert_sqlite_to_mysql.py  dev_backend.sh  import_content_batches.py  import_institutions.py  integration_client.py  normalize_content_batch.py  run_web.sh  smoke_backend.py  smoke_demo.sh  validate_content_batch.py
src/: main.py  mobile_webview.py
tests/: conftest.py  test_admin.py  test_admin_content.py  test_admin_users.py  test_ai_assist.py  test_assistant_chat.py  test_auth.py  test_bootstrap.py  test_dashboard.py  test_notification_rules.py  test_notifications.py  test_push_notifications.py  test_security.py  test_user.py  (+4 more)
(+248 files in other folders)
