[project]
name = "belpomoshnik"
version = "0.1.0"
description = "Diploma mobile application prototype built with Flet and Python."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flet==0.85.0",
    "flet-cli==0.85.0",
    "flet-desktop==0.85.0",
    "flet-web==0.85.0",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "sqlalchemy==2.0.41",
    "pydantic==2.11.7",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=41.0.0",
    "email-validator>=2.0.0",
]

[tool.flet]
org = "by.belpomoshnik"
product = "Белпомощник"
company = "Учебный проект"
copyright = "Copyright (C) 2026"
