[project]
name = "belpomoshnik"
version = "0.1.0"
description = "Belpomoshnik — React/Vite frontend + FastAPI backend на MySQL; Flet ships the same web app as a native WebView shell (Android/iOS/desktop)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Flet is used ONLY as a native WebView shell (src/mobile_webview.py) that
    # loads the React/Vite app — the native Flet UI was removed. flet-web is not
    # needed (WebView does not run in Flutter Web).
    "flet==0.85.2",
    "flet-cli==0.85.2",
    "flet-desktop==0.85.2",
    "flet-webview==0.85.2",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "sqlalchemy==2.0.41",
    "pydantic==2.11.7",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=41.0.0",
    "email-validator>=2.0.0",
    # MySQL — единственная СУБД проекта. PyMySQL: чистый-Python, без C-зависимостей.
    # cryptography — для caching_sha2_password (MySQL 8 auth plugin по умолчанию).
    "pymysql==1.1.1",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "httpx>=0.27"]

[tool.flet]
org = "by.belpomoshnik"
product = "Белпомощник"
company = "Учебный проект"
copyright = "Copyright (C) 2026"
